Implement set mode handler
